// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "banana": "#E9B200",
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "indonesia": "#00A8Be",
          "kiwi": "#86AD20",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lightIndonesia": "#AADFE7",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "primarySoft": "#fef4e6",
          "raspBerry": "#F04540",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "snow": "#F0F3F5",
          "softBanana": "#FFF9DD",
          "softGrey": "#788590",
          "softIndonesia": "#D6EEF2",
          "softKiwi": "#e7f1d5",
          "softRaspBerry": "#FAE7E7",
          "stone": "#788590",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "banana": "#E9B200",
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "indonesia": "#00A8Be",
            "kiwi": "#86AD20",
            "primary": "white",
            "raspBerry": "#F04540",
            "stone": "#788590",
            "white": "#FFFFFF",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber>
        <WithStyles(Label)
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "2": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "banana": "#E9B200",
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "indonesia": "#00A8Be",
                "kiwi": "#86AD20",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lightIndonesia": "#AADFE7",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "primarySoft": "#fef4e6",
                "raspBerry": "#F04540",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "snow": "#F0F3F5",
                "softBanana": "#FFF9DD",
                "softGrey": "#788590",
                "softIndonesia": "#D6EEF2",
                "softKiwi": "#e7f1d5",
                "softRaspBerry": "#FAE7E7",
                "stone": "#788590",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "banana": "#E9B200",
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "indonesia": "#00A8Be",
                  "kiwi": "#86AD20",
                  "primary": "white",
                  "raspBerry": "#F04540",
                  "stone": "#788590",
                  "white": "#FFFFFF",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
        >
          <Label
            classes={
              Object {
                "icon": "HoiPoi-Label-icon-0-2-4",
                "info": "HoiPoi-Label-info-0-2-3",
                "root": "HoiPoi-Label-root-0-2-1",
                "text": "HoiPoi-Label-text-0-2-2",
              }
            }
          >
            <span
              className="HoiPoi-Label-root-0-2-1"
            >
              <span
                className="HoiPoi-Label-text-0-2-2"
              >
                Lorem ipsum
              </span>
            </span>
          </Label>
        </WithStyles(Label)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Label is required match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "banana": "#E9B200",
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "indonesia": "#00A8Be",
          "kiwi": "#86AD20",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lightIndonesia": "#AADFE7",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "primarySoft": "#fef4e6",
          "raspBerry": "#F04540",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "snow": "#F0F3F5",
          "softBanana": "#FFF9DD",
          "softGrey": "#788590",
          "softIndonesia": "#D6EEF2",
          "softKiwi": "#e7f1d5",
          "softRaspBerry": "#FAE7E7",
          "stone": "#788590",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "banana": "#E9B200",
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "indonesia": "#00A8Be",
            "kiwi": "#86AD20",
            "primary": "white",
            "raspBerry": "#F04540",
            "stone": "#788590",
            "white": "#FFFFFF",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        isRequired={true}
      >
        <WithStyles(Label)
          innerRef={null}
          isRequired={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "2": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "banana": "#E9B200",
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "indonesia": "#00A8Be",
                "kiwi": "#86AD20",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lightIndonesia": "#AADFE7",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "primarySoft": "#fef4e6",
                "raspBerry": "#F04540",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "snow": "#F0F3F5",
                "softBanana": "#FFF9DD",
                "softGrey": "#788590",
                "softIndonesia": "#D6EEF2",
                "softKiwi": "#e7f1d5",
                "softRaspBerry": "#FAE7E7",
                "stone": "#788590",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "banana": "#E9B200",
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "indonesia": "#00A8Be",
                  "kiwi": "#86AD20",
                  "primary": "white",
                  "raspBerry": "#F04540",
                  "stone": "#788590",
                  "white": "#FFFFFF",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
        >
          <Label
            classes={
              Object {
                "icon": "HoiPoi-HoiPoi-Label-icon-0-2-8",
                "info": "HoiPoi-HoiPoi-Label-info-0-2-7",
                "root": "HoiPoi-HoiPoi-Label-root-0-2-5",
                "text": "HoiPoi-HoiPoi-Label-text-0-2-6",
              }
            }
            isRequired={true}
          >
            <span
              className="HoiPoi-HoiPoi-Label-root-0-2-5"
            >
              <span
                className="HoiPoi-HoiPoi-Label-text-0-2-6"
              >
                Lorem ipsum
                *
              </span>
            </span>
          </Label>
        </WithStyles(Label)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Label with hint match 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "banana": "#E9B200",
          "black": "#262B34",
          "danger": "#f04540",
          "dangerDark": "#C43833",
          "dangerLight": "#FF544F",
          "disabledGrey": "#ced4d9",
          "grey": "#697782",
          "indonesia": "#00A8Be",
          "kiwi": "#86AD20",
          "lightBlack": "#5f656b",
          "lightGrey": "#f0f3f5",
          "lightIndonesia": "#AADFE7",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#ff9d26",
          "primarySoft": "#fef4e6",
          "raspBerry": "#F04540",
          "secundary": "#00A8Be",
          "secundarySoft": "#D6EEF2",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "snow": "#F0F3F5",
          "softBanana": "#FFF9DD",
          "softGrey": "#788590",
          "softIndonesia": "#D6EEF2",
          "softKiwi": "#e7f1d5",
          "softRaspBerry": "#FAE7E7",
          "stone": "#788590",
          "tableHeader": "#f6f7f9",
          "tableHover": "#FAFBFC",
          "text": Object {
            "banana": "#E9B200",
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "indonesia": "#00A8Be",
            "kiwi": "#86AD20",
            "primary": "white",
            "raspBerry": "#F04540",
            "stone": "#788590",
            "white": "#FFFFFF",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi-"
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        hint="I am a hint"
      >
        <WithStyles(Label)
          hint="I am a hint"
          innerRef={null}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "0": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
                "2": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi-HoiPoi-HoiPoi-",
                "generateId": [Function],
              },
            }
          }
          theme={
            Object {
              "colors": Object {
                "banana": "#E9B200",
                "black": "#262B34",
                "danger": "#f04540",
                "dangerDark": "#C43833",
                "dangerLight": "#FF544F",
                "disabledGrey": "#ced4d9",
                "grey": "#697782",
                "indonesia": "#00A8Be",
                "kiwi": "#86AD20",
                "lightBlack": "#5f656b",
                "lightGrey": "#f0f3f5",
                "lightIndonesia": "#AADFE7",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#ff9d26",
                "primarySoft": "#fef4e6",
                "raspBerry": "#F04540",
                "secundary": "#00A8Be",
                "secundarySoft": "#D6EEF2",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "snow": "#F0F3F5",
                "softBanana": "#FFF9DD",
                "softGrey": "#788590",
                "softIndonesia": "#D6EEF2",
                "softKiwi": "#e7f1d5",
                "softRaspBerry": "#FAE7E7",
                "stone": "#788590",
                "tableHeader": "#f6f7f9",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "banana": "#E9B200",
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "indonesia": "#00A8Be",
                  "kiwi": "#86AD20",
                  "primary": "white",
                  "raspBerry": "#F04540",
                  "stone": "#788590",
                  "white": "#FFFFFF",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
        >
          <Label
            classes={
              Object {
                "icon": "HoiPoi-HoiPoi-HoiPoi-Label-icon-0-2-12",
                "info": "HoiPoi-HoiPoi-HoiPoi-Label-info-0-2-11",
                "root": "HoiPoi-HoiPoi-HoiPoi-Label-root-0-2-9",
                "text": "HoiPoi-HoiPoi-HoiPoi-Label-text-0-2-10",
              }
            }
            hint="I am a hint"
          >
            <span
              className="HoiPoi-HoiPoi-HoiPoi-Label-root-0-2-9"
            >
              <span
                className="HoiPoi-HoiPoi-HoiPoi-Label-text-0-2-10"
              >
                Lorem ipsum
              </span>
              <JssContextSubscriber
                content="I am a hint"
                placement="top"
                trigger={
                  Array [
                    "hover",
                  ]
                }
              >
                <WithStyles(Popover)
                  content="I am a hint"
                  innerRef={null}
                  jssContext={
                    Object {
                      "disableStylesGeneration": false,
                      "jss": Jss {
                        "generateId": [Function],
                        "id": 2,
                        "options": Object {
                          "Renderer": [Function],
                          "createGenerateId": [Function],
                          "plugins": Array [],
                        },
                        "plugins": PluginsRegistry {
                          "plugins": Object {
                            "external": Array [
                              Object {
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                                "onUpdate": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                                "onProcessRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onProcessRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onProcessStyle": [Function],
                              },
                            ],
                            "internal": Array [
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onChangeValue": [Function],
                                "onCreateRule": [Function],
                                "onProcessStyle": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                              Object {
                                "onCreateRule": [Function],
                              },
                            ],
                          },
                          "registry": Object {
                            "onChangeValue": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onCreateRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessRule": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onProcessSheet": Array [],
                            "onProcessStyle": Array [
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                              [Function],
                            ],
                            "onUpdate": Array [
                              [Function],
                            ],
                          },
                        },
                        "version": "10.0.0-alpha.16",
                      },
                      "managers": Object {
                        "0": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                        "1": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                        "2": SheetsManager {
                          "length": 1,
                          "sheets": WeakMap {},
                        },
                      },
                      "sheetOptions": Object {
                        "classNamePrefix": "HoiPoi-HoiPoi-HoiPoi-",
                        "generateId": [Function],
                      },
                    }
                  }
                  placement="top"
                  theme={
                    Object {
                      "colors": Object {
                        "banana": "#E9B200",
                        "black": "#262B34",
                        "danger": "#f04540",
                        "dangerDark": "#C43833",
                        "dangerLight": "#FF544F",
                        "disabledGrey": "#ced4d9",
                        "grey": "#697782",
                        "indonesia": "#00A8Be",
                        "kiwi": "#86AD20",
                        "lightBlack": "#5f656b",
                        "lightGrey": "#f0f3f5",
                        "lightIndonesia": "#AADFE7",
                        "lines": "#dce3eb",
                        "link": "#216db3",
                        "linkDark": "#174a79",
                        "overlay": "rgba(33,33,33,0.55)",
                        "placeholders": "#e1e4e7",
                        "placeholdersHover": "#d0d4d8",
                        "primary": "#FF8C00",
                        "primaryDark": "#C87600",
                        "primaryLight": "#ff9d26",
                        "primarySoft": "#fef4e6",
                        "raspBerry": "#F04540",
                        "secundary": "#00A8Be",
                        "secundarySoft": "#D6EEF2",
                        "shadow": "rgba(0, 0, 0, 0.25)",
                        "snow": "#F0F3F5",
                        "softBanana": "#FFF9DD",
                        "softGrey": "#788590",
                        "softIndonesia": "#D6EEF2",
                        "softKiwi": "#e7f1d5",
                        "softRaspBerry": "#FAE7E7",
                        "stone": "#788590",
                        "tableHeader": "#f6f7f9",
                        "tableHover": "#FAFBFC",
                        "text": Object {
                          "banana": "#E9B200",
                          "black": "#3c4248",
                          "danger": "white",
                          "default": "#697782",
                          "indonesia": "#00A8Be",
                          "kiwi": "#86AD20",
                          "primary": "white",
                          "raspBerry": "#F04540",
                          "stone": "#788590",
                          "white": "#FFFFFF",
                        },
                        "transparentBlack": "rgba(38, 43, 52, 0.8)",
                        "white": "#FFFFFF",
                      },
                      "effects": Object {
                        "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                        "buttonActive": Object {
                          "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                        },
                      },
                      "typography": Object {
                        "bigText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 16,
                          "letterSpacing": 0.5,
                        },
                        "button": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "lineHeight": 1.5,
                        },
                        "defaultText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 13,
                          "letterSpacing": 0.5,
                        },
                        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                        "fontSizeBase": 13,
                        "fontSizeSmall": 11,
                        "letterSpacing": 0.5,
                        "lineHeightBase": 1.5,
                        "smallText": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                          "fontSize": 11,
                          "letterSpacing": 0.5,
                        },
                      },
                    }
                  }
                  trigger={
                    Array [
                      "hover",
                    ]
                  }
                >
                  <Popover
                    classes={
                      Object {
                        "root": "HoiPoi-HoiPoi-HoiPoi-Popover-root-0-2-13",
                      }
                    }
                    content="I am a hint"
                    placement="top"
                    trigger={
                      Array [
                        "hover",
                      ]
                    }
                  >
                    <Tooltip
                      align={Object {}}
                      arrowContent={null}
                      destroyTooltipOnHide={false}
                      mouseEnterDelay={0}
                      mouseLeaveDelay={0.1}
                      overlay="I am a hint"
                      overlayClassName="HoiPoi-HoiPoi-HoiPoi-Popover-root-0-2-13"
                      placement="top"
                      prefixCls="hoi-poi-popover"
                      transitionName="hoi-poi-popover--fade"
                      trigger={
                        Array [
                          "hover",
                        ]
                      }
                    >
                      <Trigger
                        action={
                          Array [
                            "hover",
                          ]
                        }
                        afterPopupVisibleChange={[Function]}
                        arrowContent={null}
                        blurDelay={0.15}
                        builtinPlacements={
                          Object {
                            "bottom": Object {
                              "offset": Array [
                                0,
                                4,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "tc",
                                "bc",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "bottomLeft": Object {
                              "offset": Array [
                                0,
                                4,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "tl",
                                "bl",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "bottomRight": Object {
                              "offset": Array [
                                0,
                                4,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "tr",
                                "br",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "left": Object {
                              "offset": Array [
                                -4,
                                0,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "cr",
                                "cl",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "leftBottom": Object {
                              "offset": Array [
                                -4,
                                0,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "br",
                                "bl",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "leftTop": Object {
                              "offset": Array [
                                -4,
                                0,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "tr",
                                "tl",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "right": Object {
                              "offset": Array [
                                4,
                                0,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "cl",
                                "cr",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "rightBottom": Object {
                              "offset": Array [
                                4,
                                0,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "bl",
                                "br",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "rightTop": Object {
                              "offset": Array [
                                4,
                                0,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "tl",
                                "tr",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "top": Object {
                              "offset": Array [
                                0,
                                -4,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "bc",
                                "tc",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "topLeft": Object {
                              "offset": Array [
                                0,
                                -4,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "bl",
                                "tl",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                            "topRight": Object {
                              "offset": Array [
                                0,
                                -4,
                              ],
                              "overflow": Object {
                                "adjustX": 1,
                                "adjustY": 1,
                              },
                              "points": Array [
                                "br",
                                "tr",
                              ],
                              "targetOffset": Array [
                                0,
                                0,
                              ],
                            },
                          }
                        }
                        defaultPopupVisible={false}
                        destroyPopupOnHide={false}
                        focusDelay={0}
                        getDocument={[Function]}
                        getPopupClassNameFromAlign={[Function]}
                        hideAction={Array []}
                        mask={false}
                        maskClosable={true}
                        mouseEnterDelay={0}
                        mouseLeaveDelay={0.1}
                        onPopupAlign={[Function]}
                        onPopupVisibleChange={[Function]}
                        overlay="I am a hint"
                        popup={[Function]}
                        popupAlign={Object {}}
                        popupClassName="HoiPoi-HoiPoi-HoiPoi-Popover-root-0-2-13"
                        popupPlacement="top"
                        popupStyle={Object {}}
                        popupTransitionName="hoi-poi-popover--fade"
                        prefixCls="hoi-poi-popover"
                        showAction={Array []}
                      >
                        <span
                          className="HoiPoi-HoiPoi-HoiPoi-Label-info-0-2-11"
                          key="trigger"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <JssContextSubscriber
                            className="HoiPoi-HoiPoi-HoiPoi-Label-icon-0-2-12"
                            name="info"
                          >
                            <WithStyles(WithTheme(Icon))
                              className="HoiPoi-HoiPoi-HoiPoi-Label-icon-0-2-12"
                              innerRef={null}
                              jssContext={
                                Object {
                                  "disableStylesGeneration": false,
                                  "jss": Jss {
                                    "generateId": [Function],
                                    "id": 2,
                                    "options": Object {
                                      "Renderer": [Function],
                                      "createGenerateId": [Function],
                                      "plugins": Array [],
                                    },
                                    "plugins": PluginsRegistry {
                                      "plugins": Object {
                                        "external": Array [
                                          Object {
                                            "onCreateRule": [Function],
                                            "onProcessStyle": [Function],
                                            "onUpdate": [Function],
                                          },
                                          Object {
                                            "onCreateRule": [Function],
                                            "onProcessRule": [Function],
                                          },
                                          Object {
                                            "onProcessRule": [Function],
                                          },
                                          Object {
                                            "onCreateRule": [Function],
                                            "onProcessRule": [Function],
                                          },
                                          Object {
                                            "onChangeValue": [Function],
                                            "onProcessStyle": [Function],
                                          },
                                          Object {
                                            "onProcessStyle": [Function],
                                          },
                                          Object {
                                            "onProcessStyle": [Function],
                                          },
                                          Object {
                                            "onChangeValue": [Function],
                                            "onProcessStyle": [Function],
                                          },
                                          Object {
                                            "onChangeValue": [Function],
                                            "onProcessStyle": [Function],
                                          },
                                          Object {
                                            "onProcessStyle": [Function],
                                          },
                                          Object {
                                            "onChangeValue": [Function],
                                            "onProcessRule": [Function],
                                            "onProcessStyle": [Function],
                                          },
                                          Object {
                                            "onProcessStyle": [Function],
                                          },
                                        ],
                                        "internal": Array [
                                          Object {
                                            "onCreateRule": [Function],
                                          },
                                          Object {
                                            "onCreateRule": [Function],
                                          },
                                          Object {
                                            "onChangeValue": [Function],
                                            "onCreateRule": [Function],
                                            "onProcessStyle": [Function],
                                          },
                                          Object {
                                            "onCreateRule": [Function],
                                          },
                                          Object {
                                            "onCreateRule": [Function],
                                          },
                                          Object {
                                            "onCreateRule": [Function],
                                          },
                                          Object {
                                            "onCreateRule": [Function],
                                          },
                                        ],
                                      },
                                      "registry": Object {
                                        "onChangeValue": Array [
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                        ],
                                        "onCreateRule": Array [
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                        ],
                                        "onProcessRule": Array [
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                        ],
                                        "onProcessSheet": Array [],
                                        "onProcessStyle": Array [
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                          [Function],
                                        ],
                                        "onUpdate": Array [
                                          [Function],
                                        ],
                                      },
                                    },
                                    "version": "10.0.0-alpha.16",
                                  },
                                  "managers": Object {
                                    "0": SheetsManager {
                                      "length": 1,
                                      "sheets": WeakMap {},
                                    },
                                    "1": SheetsManager {
                                      "length": 1,
                                      "sheets": WeakMap {},
                                    },
                                    "2": SheetsManager {
                                      "length": 1,
                                      "sheets": WeakMap {},
                                    },
                                  },
                                  "sheetOptions": Object {
                                    "classNamePrefix": "HoiPoi-HoiPoi-HoiPoi-",
                                    "generateId": [Function],
                                  },
                                }
                              }
                              name="info"
                              theme={
                                Object {
                                  "colors": Object {
                                    "banana": "#E9B200",
                                    "black": "#262B34",
                                    "danger": "#f04540",
                                    "dangerDark": "#C43833",
                                    "dangerLight": "#FF544F",
                                    "disabledGrey": "#ced4d9",
                                    "grey": "#697782",
                                    "indonesia": "#00A8Be",
                                    "kiwi": "#86AD20",
                                    "lightBlack": "#5f656b",
                                    "lightGrey": "#f0f3f5",
                                    "lightIndonesia": "#AADFE7",
                                    "lines": "#dce3eb",
                                    "link": "#216db3",
                                    "linkDark": "#174a79",
                                    "overlay": "rgba(33,33,33,0.55)",
                                    "placeholders": "#e1e4e7",
                                    "placeholdersHover": "#d0d4d8",
                                    "primary": "#FF8C00",
                                    "primaryDark": "#C87600",
                                    "primaryLight": "#ff9d26",
                                    "primarySoft": "#fef4e6",
                                    "raspBerry": "#F04540",
                                    "secundary": "#00A8Be",
                                    "secundarySoft": "#D6EEF2",
                                    "shadow": "rgba(0, 0, 0, 0.25)",
                                    "snow": "#F0F3F5",
                                    "softBanana": "#FFF9DD",
                                    "softGrey": "#788590",
                                    "softIndonesia": "#D6EEF2",
                                    "softKiwi": "#e7f1d5",
                                    "softRaspBerry": "#FAE7E7",
                                    "stone": "#788590",
                                    "tableHeader": "#f6f7f9",
                                    "tableHover": "#FAFBFC",
                                    "text": Object {
                                      "banana": "#E9B200",
                                      "black": "#3c4248",
                                      "danger": "white",
                                      "default": "#697782",
                                      "indonesia": "#00A8Be",
                                      "kiwi": "#86AD20",
                                      "primary": "white",
                                      "raspBerry": "#F04540",
                                      "stone": "#788590",
                                      "white": "#FFFFFF",
                                    },
                                    "transparentBlack": "rgba(38, 43, 52, 0.8)",
                                    "white": "#FFFFFF",
                                  },
                                  "effects": Object {
                                    "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                                    "buttonActive": Object {
                                      "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                                    },
                                  },
                                  "typography": Object {
                                    "bigText": Object {
                                      "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                      "fontSize": 16,
                                      "letterSpacing": 0.5,
                                    },
                                    "button": Object {
                                      "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                      "fontSize": 11,
                                      "lineHeight": 1.5,
                                    },
                                    "defaultText": Object {
                                      "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                      "fontSize": 13,
                                      "letterSpacing": 0.5,
                                    },
                                    "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                    "fontSizeBase": 13,
                                    "fontSizeSmall": 11,
                                    "letterSpacing": 0.5,
                                    "lineHeightBase": 1.5,
                                    "smallText": Object {
                                      "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                      "fontSize": 11,
                                      "letterSpacing": 0.5,
                                    },
                                  },
                                }
                              }
                            >
                              <WithTheme(Icon)
                                className="HoiPoi-HoiPoi-HoiPoi-Label-icon-0-2-12"
                                classes={
                                  Object {
                                    "big": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-big-0-2-18",
                                    "large": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-large-0-2-17",
                                    "medium": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-medium-0-2-16",
                                    "root": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-root-0-2-14",
                                    "small": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-small-0-2-15",
                                  }
                                }
                                name="info"
                              >
                                <Icon
                                  className="HoiPoi-HoiPoi-HoiPoi-Label-icon-0-2-12"
                                  classes={
                                    Object {
                                      "big": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-big-0-2-18",
                                      "large": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-large-0-2-17",
                                      "medium": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-medium-0-2-16",
                                      "root": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-root-0-2-14",
                                      "small": "HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-small-0-2-15",
                                    }
                                  }
                                  name="info"
                                  size="medium"
                                  theme={
                                    Object {
                                      "colors": Object {
                                        "banana": "#E9B200",
                                        "black": "#262B34",
                                        "danger": "#f04540",
                                        "dangerDark": "#C43833",
                                        "dangerLight": "#FF544F",
                                        "disabledGrey": "#ced4d9",
                                        "grey": "#697782",
                                        "indonesia": "#00A8Be",
                                        "kiwi": "#86AD20",
                                        "lightBlack": "#5f656b",
                                        "lightGrey": "#f0f3f5",
                                        "lightIndonesia": "#AADFE7",
                                        "lines": "#dce3eb",
                                        "link": "#216db3",
                                        "linkDark": "#174a79",
                                        "overlay": "rgba(33,33,33,0.55)",
                                        "placeholders": "#e1e4e7",
                                        "placeholdersHover": "#d0d4d8",
                                        "primary": "#FF8C00",
                                        "primaryDark": "#C87600",
                                        "primaryLight": "#ff9d26",
                                        "primarySoft": "#fef4e6",
                                        "raspBerry": "#F04540",
                                        "secundary": "#00A8Be",
                                        "secundarySoft": "#D6EEF2",
                                        "shadow": "rgba(0, 0, 0, 0.25)",
                                        "snow": "#F0F3F5",
                                        "softBanana": "#FFF9DD",
                                        "softGrey": "#788590",
                                        "softIndonesia": "#D6EEF2",
                                        "softKiwi": "#e7f1d5",
                                        "softRaspBerry": "#FAE7E7",
                                        "stone": "#788590",
                                        "tableHeader": "#f6f7f9",
                                        "tableHover": "#FAFBFC",
                                        "text": Object {
                                          "banana": "#E9B200",
                                          "black": "#3c4248",
                                          "danger": "white",
                                          "default": "#697782",
                                          "indonesia": "#00A8Be",
                                          "kiwi": "#86AD20",
                                          "primary": "white",
                                          "raspBerry": "#F04540",
                                          "stone": "#788590",
                                          "white": "#FFFFFF",
                                        },
                                        "transparentBlack": "rgba(38, 43, 52, 0.8)",
                                        "white": "#FFFFFF",
                                      },
                                      "effects": Object {
                                        "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                                        "buttonActive": Object {
                                          "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                                        },
                                      },
                                      "typography": Object {
                                        "bigText": Object {
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                          "fontSize": 16,
                                          "letterSpacing": 0.5,
                                        },
                                        "button": Object {
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                          "fontSize": 11,
                                          "lineHeight": 1.5,
                                        },
                                        "defaultText": Object {
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                          "fontSize": 13,
                                          "letterSpacing": 0.5,
                                        },
                                        "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                        "fontSizeBase": 13,
                                        "fontSizeSmall": 11,
                                        "letterSpacing": 0.5,
                                        "lineHeightBase": 1.5,
                                        "smallText": Object {
                                          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                          "fontSize": 11,
                                          "letterSpacing": 0.5,
                                        },
                                      },
                                    }
                                  }
                                >
                                  <span
                                    className="HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-root-0-2-14 HoiPoi-HoiPoi-HoiPoi-WithTheme(Icon)-medium-0-2-16 HoiPoi-HoiPoi-HoiPoi-Label-icon-0-2-12"
                                  >
                                    <Info
                                      color="#788590"
                                    >
                                      <svg
                                        viewBox="0 0 18 18"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M8.998.001C3.913.08-.077 4.227.001 9.157.08 14.165 3.991 18 8.841 18h.157c2.426-.078 4.694-1.017 6.416-2.739 1.72-1.722 2.66-3.991 2.581-6.417-.078-5.008-3.99-8.921-8.997-8.843zm1.096 13.93c0 .547-.47 1.095-1.096 1.095-.547 0-1.095-.47-1.095-1.095v-5.4c0-.548.47-1.096 1.095-1.096.548 0 1.096.47 1.096 1.096v5.4zm-1.096-7.2c-.704 0-1.33-.626-1.33-1.33 0-.704.626-1.252 1.33-1.252.704 0 1.33.626 1.33 1.33-.078.704-.626 1.252-1.33 1.252z"
                                          fill="#788590"
                                          fillRule="nonzero"
                                        />
                                      </svg>
                                    </Info>
                                  </span>
                                </Icon>
                              </WithTheme(Icon)>
                            </WithStyles(WithTheme(Icon))>
                          </JssContextSubscriber>
                        </span>
                      </Trigger>
                    </Tooltip>
                  </Popover>
                </WithStyles(Popover)>
              </JssContextSubscriber>
            </span>
          </Label>
        </WithStyles(Label)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
